--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.header {
+  font-size: 48px;
+  text-align: center;
+  padding: 20px;
+  background-color: #f0f0f0;
+  color: #010101;
+}
 .section {
   height: 100vh;
   display: flex;
