--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,17 @@
 .section-dark-grey {
   background-color: #696969;
 }
+
+.github-button {
+  font-size: 20px;
+  padding: 10px 20px;
+  color: white;
+  background-color: #333;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.github-button:hover {
+  background-color: #555;
+}
