--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,13 @@
 .section {
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: last baseline;
   font-size: 24px;
   color: white;
 }
 
-.section-light-grey {
+.section-white {
   background-color: #d3d3d3;
 }
 
