--- a/src/App.css
+++ b/src/App.css
@@ -1,133 +1,124 @@
-@keyframes slideInFromLeft {
-  from {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Reddit Mono", monospace;
+  font-optical-sizing: auto;
   margin: 0;
   padding: 0;
 }
 
-header {
-  background-color: #333;
-  color: white;
-  padding: 1rem 0;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
+.App {
+  width: 80%;
+  margin: auto;
   display: flex;
-  justify-content: flex-start;
-}
-
-nav ul li {
-  margin: 0 1rem;
-}
-
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.2rem;
-}
-
-section {
-  padding: 2rem;
-  text-align: center;
-}
-
-.project {
-  border: 1px solid #ccc;
-  margin: 1rem;
-  padding: 1rem;
-  animation: fadeIn 1s ease-in-out forwards;
-}
-
-footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 1rem 0;
-}
-
-#contact form {
-  display: flex;
+  justify-content: center;
   flex-direction: column;
-  align-items: center;
-  max-width: 600px;
-  margin: 0 auto;
 }
 
-#contact label {
-  margin: 1rem 0 0.5rem;
-  font-weight: bold;
+#head {
+  position: sticky;
+  top: 0;
+  position: -webkit-sticky;
+  display: flex;
+  justify-content: center;
+}
+#menu {
+  margin-top: 10px;
 }
 
-#contact input, #contact textarea {
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+#menu ul {
+  background-color: #131313;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
 }
 
-#contact button {
-  padding: 0.5rem 1rem;
-  background-color: #333;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+#menu ul > * {
+    list-style: none;
+    margin: 15px 15px 15px 15px;
 }
 
-#contact button:hover {
-  background-color: #555;
+#menu ul li > * {
+    padding: 20px;
+    text-decoration: none;
+    color: #fafaf9;
+    width: 30px;
+}
+
+#menu ul li > *:hover {
+  border-radius: 10px;
+  background-color: rgb(148, 245, 201);
+  color: #242424;
+}
+
+.select-menu{
+  border-radius: 10px;
+  background-color: rgb(0, 255, 140);
+  color: #242424;
+}
+
+#home {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  background-color: #e9e9e909;
+  padding: 40px 0 40px 0;
+}
+
+#home h1 {
+  font-weight: 700;
 }
 
 .social-buttons {
-  margin-top: 1rem;
+  display: flex;
+  justify-content: space-around;
+  width: 40%;
+  margin: auto;
 }
 
-.social-button {
-  display: inline-block;
-  margin: 0.5rem;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
+.social-buttons a {
+  background-color: #000b0b;
+  padding: 15px;
+  border-radius: 12px;
+  width: 50px;
   text-decoration: none;
-  color: white;
+  color: #4b4b33;
 }
 
-.github {
-  background-color: #333;
+.social-buttons a:hover{
+  color: purple;
+  box-shadow: 5px 5px 5px #fafaf909;
 }
 
-.linkedin {
-  background-color: #0077b5;
+.social-buttons a i {
+  font-size: 2em;
 }
 
-.social-button:hover {
-  opacity: 0.8;
-}
-
-#about,
-#projects,
-#education { 
+#about {
+  display: flex;
+  justify-content: center;
   text-align: left;
-  animation: slideInFromLeft 1s ease-in-out forwards;
+  flex-direction: column;
+}
+
+#projects {
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  flex-direction: column;
+}
+
+#education {
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  flex-direction: column;
+}
+
+#contact {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Center content vertically */
+  text-align: right;
+  flex-direction: column;
 }
