--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,35 @@
-body {
+html, body {
   font-family: "Reddit Mono", monospace;
   font-optical-sizing: auto;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
+
+html {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
 
 .App {
   width: 80%;
@@ -14,6 +40,7 @@ body {
 }
 
 #head {
+  z-index: 1;
   position: sticky;
   top: 0;
   position: -webkit-sticky;
@@ -62,7 +89,7 @@ body {
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  background-color: #e9e9e909;
+  background-color: #00ff0009;
   padding: 40px 0 40px 0;
 }
 
@@ -206,6 +233,7 @@ body {
   cursor: pointer;
 }
 
+
 #education {
   display: flex;
   justify-content: center;
@@ -213,11 +241,52 @@ body {
   flex-direction: column;
 }
 
+#skills {
+  text-align: left;
+}
+
+.container {
+  display: inline-block;
+  text-align: left;
+}
+
+.skill {
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: center;
+}
+
+.skilllist {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logotext {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logotext > * {
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+}
+
+.logo i {
+  font-size: 4em;
+}
+
 #contact {
-  background-color: #fafaf909;
   padding: 2rem;
   border-radius: 0.5rem;
-  box-shadow: 0 0 10px #ccc;
 }
 
 #contact h2 {
