--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,44 @@
-html, body {
-  font-family: "Reddit Mono", monospace;
-  font-optical-sizing: auto;
-  margin: 0;
-  padding: 0;
-  height: 100%;
+:root {
+  --black-bg: #242424;
+  --white: #fafaf9;
+  --accent1: #35fa70;
+  --accent2: #18642f;
 }
 
 
+
+body {
+  padding: 20px;
+  margin: auto;
+  font-family: "Reddit Mono", monospace;
+  font-optical-sizing: auto;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100%;
+
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .App {
-  width: 80%;
+  width: 60%;
   margin: auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
+
 
 #head {
   z-index: 1;
@@ -29,7 +54,7 @@ html, body {
 }
 
 #menu ul {
-  background-color: #131313;
+  background-color: var(--black-bg);
   border-radius: 12px;
   display: flex;
   justify-content: space-around;
@@ -50,13 +75,13 @@ html, body {
 
 #menu ul li > *:hover {
   border-radius: 10px;
-  background-color: rgb(148, 245, 201);
-  color: #242424;
+  background-color: var(--accent1);
+  color: var(--black-bg);
 }
 
 .select-menu {
   border-radius: 10px;
-  background-color: rgb(0, 255, 140);
+  background-color: var(--accent1);
   color: #242424;
 }
 
@@ -179,10 +204,20 @@ html, body {
   height: 100%;
   width: 100%;
   opacity: 0;
+  border-radius: 100%;
   transition: .5s ease;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #00000062;
+}
+
+.overlay a {
+  color: #fafaf9;
+  background-color: #242424;
+  border-radius: 12px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 .proj-1:hover .overlay, .proj-2:hover .overlay, .proj-3:hover .overlay {
@@ -204,7 +239,6 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: #000000; 
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -217,7 +251,7 @@ html, body {
 }
 
 .close {
-  color: #000000;
+  color: var(--white);
   float: right;
   font-size: 28px;
   font-weight: bold;
