--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,6 @@ body {
   height: 300px;
 }
 
-
 .proj-2 {
   grid-area: 1 / 2 / 2 / 3; 
   background-image: url(/riyan1.png);
@@ -161,8 +160,19 @@ body {
 }
 
 .proj-3 {
-  grid-area: 1 / 3 / 2 / 3; 
+  grid-area: 1 / 3 / 2 / 4; 
   background-image: url(/gadot.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
+
+.proj-4 {
+  grid-area: 2 / 1 / 2 / 2; 
+  background-image: url(/curren.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -173,14 +183,14 @@ body {
 
 .project-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 2fr);
+  grid-template-rows: 2fr;
   grid-column-gap: 60px;
   grid-row-gap: 60px;
   margin: auto;
 }
 
-.proj-1, .proj-2, .proj-3 {
+.proj-1, .proj-2, .proj-3, .proj-4 {
   width: 300px;
   height: 300px;
   display: block;
@@ -191,7 +201,7 @@ body {
   transition: all ease-in 1s;
 }
 
-.proj-1:hover .overlay, .proj-2:hover .overlay, .proj-3:hover .overlay {
+.proj-1:hover .overlay, .proj-2:hover .overlay, .proj-3:hover .overlay, .proj-4:hover .overlay {
   opacity: 1;
 }
 
@@ -220,7 +230,7 @@ body {
   cursor: pointer;
 }
 
-.proj-1:hover .overlay, .proj-2:hover .overlay, .proj-3:hover .overlay {
+.proj-1:hover .overlay, .proj-2:hover .overlay, .proj-3:hover .overlay, .proj-4:hover .overlay {
   opacity: 1;
 }
 
