--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   margin: auto;
   font-family: "Reddit Mono", monospace;
   font-optical-sizing: auto;
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-45deg, #0163b9, #144371, #0b88b5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100%;
@@ -139,7 +139,7 @@ body {
 
 .proj-1 {
   grid-area: 1 / 1 / 2 / 2; 
-  background-image: url(/exploreit.png);
+  background-image: url(/gcp22.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
