--- a/src/App.css
+++ b/src/App.css
@@ -135,70 +135,46 @@ body {
   justify-content: center;
   text-align: left;
   flex-direction: column;
-}
-
-.proj-1 {
-  grid-area: 1 / 1 / 2 / 2; 
-  background-image: url(/gcp22.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  width: 300px;
-  height: 300px;
-}
-
-.proj-2 {
-  grid-area: 1 / 2 / 2 / 3; 
-  background-image: url(/riyan1.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  width: 300px;
-  height: 300px;
-}
-
-.proj-3 {
-  grid-area: 1 / 3 / 2 / 4; 
-  background-image: url(/gadot.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  width: 300px;
-  height: 300px;
-}
-
-.proj-4 {
-  grid-area: 2 / 1 / 2 / 2; 
-  background-image: url(/curren.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  align-items: center; 
 }
 
 .project-grid {
   display: grid;
-  grid-template-columns: repeat(3, 2fr);
-  grid-template-rows: 2fr;
-  grid-column-gap: 60px;
-  grid-row-gap: 60px;
-  margin: auto;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto); 
+  grid-gap: 60px;
+  margin: 20px; 
+  width: 100%;
+  max-width: 1200px;
 }
 
 .proj-1, .proj-2, .proj-3, .proj-4 {
-  width: 300px;
+  width: 100%;
   height: 300px;
   display: block;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain; /* Ensure entire image fits */
   position: relative;
   transition: all ease-in 1s;
+  border-radius: 10px; 
+}
+
+.proj-1 {
+  background-image: url(/gcp.png);
+}
+
+.proj-2 {
+  background-image: url(/riyan22.png);
+}
+
+.proj-3 {
+  background-image: url(/gadot2.png);
+}
+
+.proj-4 {
+  background-image: url(/curren.png);
 }
 
 .proj-1:hover .overlay, .proj-2:hover .overlay, .proj-3:hover .overlay, .proj-4:hover .overlay {
@@ -214,7 +190,7 @@ body {
   height: 100%;
   width: 100%;
   opacity: 0;
-  border-radius: 100%;
+  border-radius: 10px;
   transition: .5s ease;
   display: flex;
   align-items: center;
@@ -228,10 +204,6 @@ body {
   border-radius: 12px;
   padding: 5px;
   cursor: pointer;
-}
-
-.proj-1:hover .overlay, .proj-2:hover .overlay, .proj-3:hover .overlay, .proj-4:hover .overlay {
-  opacity: 1;
 }
 
 .text {
@@ -259,6 +231,9 @@ body {
   border: 1px solid #000000;
   width: 80%;
 }
+
+
+
 
 .close {
   color: var(--white);
